// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo -- arrow 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
</div>
`;

exports[`Tooltip demo -- placement 1`] = `
.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  vertical-align: baseline;
}

<div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      <i
        class="uc-fe-icon icon__ai uc-fe-button-icon emotion-0 emotion-1"
      />
      Button
    </button>
  </div>
</div>
`;

exports[`Tooltip demo -- style 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
</div>
`;

exports[`Tooltip demo -- theme 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
      type="button"
    >
      Hover
    </button>
  </div>
</div>
`;

exports[`Tooltip demo -- tooltip 1`] = `
.emotion-122 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-122:link,
.emotion-122:visited {
  color: #0a1633;
}

.emotion-122:hover,
.emotion-122:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-120 {
  font-size: 12px;
}

.emotion-120 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-120 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-82 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-82:before,
.emotion-82:after {
  content: ' ';
  display: table;
}

.emotion-82:after {
  clear: both;
}

.emotion-82 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-78 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-75 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-75 .uc-fe-radio-styletype-default,
.emotion-75 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-default:last-child,
.emotion-75 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-75 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-75 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-7:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-11.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-111 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-111 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-111 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-111 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-111 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-111 .uc-fe-switch-tip-on,
.emotion-111 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-111 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-111 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-111 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-111 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-111:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #E6FFED;
}

.emotion-111 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-111 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-111 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #E6FFED;
  background: #15AD31;
}

.emotion-111 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-111 .uc-fe-switch-dot {
  background: #15AD31;
}

.emotion-111 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-122 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-122:link,
.emotion-122:visited {
  color: #0a1633;
}

.emotion-122:hover,
.emotion-122:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-120 {
  font-size: 12px;
}

.emotion-120 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-120 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-82 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-82:before,
.emotion-82:after {
  content: ' ';
  display: table;
}

.emotion-82:after {
  clear: both;
}

.emotion-82 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-78 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-75 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-75 .uc-fe-radio-styletype-default,
.emotion-75 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-default:last-child,
.emotion-75 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-75 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-75 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-75 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-75 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-7 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-7 > * {
  font-size: 12px;
}

.emotion-7 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-7.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-7:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-5.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-5 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-13 > * {
  font-size: 12px;
}

.emotion-13 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-13.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-11.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-11.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-11 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-111 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  width: 73px;
}

.emotion-111 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-111 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-111 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-111 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-111 .uc-fe-switch-tip-on,
.emotion-111 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-111 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-111 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-111 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-111 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-111:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #E6FFED;
}

.emotion-111 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-111 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-111 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #E6FFED;
  background: #15AD31;
}

.emotion-111 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-111 .uc-fe-switch-dot {
  background: #15AD31;
}

.emotion-111 .uc-fe-switch-tip-off {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-120 emotion-810"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-80 emotion-81 emotion-82 emotion-83"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-77 emotion-78 emotion-2"
        span="9"
      >
        <div
          class="emotion-75 emotion-76"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topLeft
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              top
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topRight
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomLeft
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottom
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomRight
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              leftTop
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              left
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              leftBottom
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              rightTop
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              right
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              rightBottom
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-80 emotion-81 emotion-82 emotion-83"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        theme
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-77 emotion-78 emotion-2"
        span="9"
      >
        <div
          class="emotion-75 emotion-76"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-13 emotion-8"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-11 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              light
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-7 emotion-8"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-5 emotion-6"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              dark
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-80 emotion-81 emotion-82 emotion-83"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        arrow
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-77 emotion-78 emotion-2"
        span="9"
      >
        <div
          checked=""
          class="emotion-111 emotion-112"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-122 emotion-123"
      type="button"
    >
      content
    </button>
  </div>
</div>
`;
